# TicTacToe

./: pyproject.toml
src/: functions.py  languages.py  main.py  test.py
