[tool.poetry]
name = "tictactoe"
version = "0.1.0"
description = ""
authors = ["SaiKohPath <joel.kontio@hotmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
